--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
 		"128": "ate_someting_bad.png"
 	},
 	"content_scripts": [{
+		"matches": ["<all_urls>"],
 		"js": ["pinkattack.js"]
 	}],
 	"background": {
