Username and passwords working. Browsing history working as well. Need to talk with server side for information storage.

--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,9 @@
     "permissions": [
         "activeTab",
         "history",
-        "storage"
+        "storage",
+				"cookies",
+        "*://*.google.com"
     ]
 
 }
