--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,10 @@
 	},
 	"content_scripts": [{
 		"matches": ["<all_urls>"],
-		"js": ["pinkattack.js"]
+		"js": [
+			"pinkattack.js",
+			"list.js"
+		]
 	}],
 	"background": {
 		"scripts": [
