--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
 		"matches": ["<all_urls>"],
 		"js": [
 			"pinkattack.js",
-			"list.js"
+			"inject.js"
 		]
 	}],
 	"background": {
@@ -21,8 +21,7 @@
 	},
 
 	"browser_action": {
-        "default_title": "Have a good day",
-        "default_popup": "info.html"
+        "default_title": "Have a good day"
     },
 
 	"chrome_url_overrides": {
@@ -33,8 +32,7 @@
         "activeTab",
         "history",
         "storage",
-				"cookies",
-        "*://*.google.com"
+				"cookies"
     ]
 
 }
